# aligntune

./: .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: documnet_release.yml  publish.yml  release.yml
ISSUES/: index.html
OVERALL_SUMMARY/: index.html
PARAMETERS/: index.html
_overrides/: footer.html  main.html  nav.html
advanced/architecture/: index.html
advanced/custom-backends/: index.html
advanced/distributed/: index.html
advanced/performance/: index.html
algorithms/dapo/: index.html
algorithms/dpo/: index.html
algorithms/dr-grpo/: index.html
algorithms/grpo/: index.html
algorithms/gspo/: index.html
algorithms/overview/: index.html
algorithms/ppo/: index.html
api-reference/api-reference/: index.html
api-reference/backend-factory/: index.html
api-reference/configuration/: index.html
api-reference/core/: index.html
api-reference/overview/: index.html
api-reference/reward-functions-reference/: index.html
api-reference/reward-model-training-reference/: index.html
api-reference/trainers/: index.html
api-reference/unified-api/: index.html
assets/: overrides.css  site.webmanifest
backends/comparison/: index.html
backends/overview/: index.html
backends/trl/: index.html
backends/unsloth/: index.html
cli-reference/: index.html
cli/commands/: index.html
cli/configuration/: index.html
cli/overview/: index.html
compatibility/backend-matrix/: index.html
contributing/code-style/: index.html
contributing/guide/: index.html
contributing/testing/: index.html
docs/: ISSUES.md  OVERALL_SUMMARY.md  PARAMETERS.md  README.md  cli-reference.md  index.md  unsloth_compatibility.md
docs/advanced/: architecture.md  custom-backends.md  distributed.md  performance.md
docs/algorithms/: dapo.md  dpo.md  dr-grpo.md  grpo.md  gspo.md  overview.md  ppo.md
docs/api-reference/: api-reference.md  backend-factory.md  configuration.md  core.md  overview.md  reward-functions-reference.md  reward-model-training-reference.md  trainers.md  unified-api.md
docs/backends/: comparison.md  overview.md  trl.md  unsloth.md
docs/cli/: commands.md  configuration.md  overview.md
docs/compatibility/: backend-matrix.md
docs/contributing/: code-style.md  guide.md  testing.md
docs/examples/: advanced.md  overview.md  rl.md  sft.md
docs/getting-started/: backend-selection.md  basic-concepts.md  configuration.md  installation.md  quickstart.md
docs/notebooks/: index.md
docs/user-guide/: evaluation.md  model-management.md  overview.md  reward-functions.md  reward-model-training.md  rl.md  sample-logging.md  sft.md  troubleshooting.md
examples/: README.md  sft_trl_1.py  sft_trl_2.py  trl_dpo_1.py  trl_grpo_1.py  trl_ppo1.py  unsloth_dpo_1.py  unsloth_grpo_1.py  unsloth_sft_1.py
examples/advanced/: index.html
examples/custom_tasks/bitext_2/: README.md  bitext_2.yaml  bitext_2_fewshot.yaml
examples/custom_tasks/bitext_3/: bitext_3.yaml  bitext_3_fewshot.yaml  utils.py
examples/custom_tasks/bitext_insurance/: bitext_insurance_eval.yaml  utils.py
examples/overview/: index.html
examples/rl/: index.html
examples/sft/: index.html
getting-started/backend-selection/: index.html
getting-started/basic-concepts/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
notebooks/: index.html
scripts/: create_notebook_from_script.py
search/: search_index.json
src/aligntune/: __init__.py  __main__.py  _fallbacks.py  _imports.py  main.py
src/aligntune/backends/: __init__.py
src/aligntune/backends/trl/: __init__.py
src/aligntune/backends/unsloth/: __init__.py
src/aligntune/cli/: __init__.py  __main__.py  arg_parser.py  config_builders.py  diagnose.py  finetune.py  recipes.py  unified-old.py  unified.py  validate.py
src/aligntune/core/: backend_factory.py  dataset_adapters.py  optimization.py  precision_handler.py
src/aligntune/core/callbacks/: __init__.py  base.py
src/aligntune/core/rl/: __init__.py  caching.py  config.py  config_loader.py  distributed.py  evaluator.py  function_based_reward_model.py  logging.py  models.py  registries.py  reward_model_wrapper.py  rollout.py  sample_logger.py  trainer_base.py  trainer_factory.py
src/aligntune/core/sft/: __init__.py  config.py  config_loader.py  evaluator.py  (+3 more)
src/aligntune/data/: README.md  full_requirements_test.py  manager.py  processors.py  schemas.py
src/aligntune/eval/: README.md  __init__.py  caching.py  cli.py  core.py  evaluator.py  evla_gsm8k.py  full_evaluation_test.py  lm_eval_integration.py  registry.py  rl_evaluator.py  runner.py  safe_executor.py
src/aligntune/recipes/: __init__.py  config.py
src/aligntune/rewards/: __init__.py  core.py  factory.py  registry.py  training.py
src/aligntune/rl/: __init__.py
src/aligntune/scripts/: __init__.py  precompute_baseline.py
src/aligntune/sft/: __init__.py
src/aligntune/utils/: __init__.py  auth.py  checkpointing.py  colored_logging.py  config_extractor.py  config_utils.py  device.py  diagnostics.py  environment.py  errors.py  inference_utils.py  logging.py  math_grading.py  model_loader.py  validation.py
tests/quick_test/: test_config.py  test_eval_trl.py  test_eval_unsloth.py  test_reward_func_trl.py  test_reward_func_unsloth.py  test_rl_config_handling.py  test_setup_trl.py  test_setup_unsloth.py  test_sft.py
unsloth_compatibility/: index.html
user-guide/evaluation/: index.html
user-guide/model-management/: index.html
user-guide/overview/: index.html
user-guide/reward-functions/: index.html
user-guide/reward-model-training/: index.html
user-guide/rl/: index.html
user-guide/sample-logging/: index.html
user-guide/sft/: index.html
user-guide/troubleshooting/: index.html
(+99 files in other folders)
