[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aligntune"
version = "0.2.0"
description = "AlignTune: Multi-backend alignment and fine-tuning library. Features TRL and Unsloth backends with complete RL coverage (DPO, PPO, GRPO, BOLT), 27+ reward functions, production-ready evaluation system, and unified configuration interface for LLM alignment."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    {name = "Zera Lyngkhoi", email = "zera.lyngkhoi@lexsi.ai"},
    {name = "Chirag Chawla", email = "chirag.chawla@lexsi.ai"},
    {name = "Pratinav Seth", email = "pratinav.seth@lexsi.ai"},
    {name = "Utsav Avaiya", email = "utsav.avaiya@lexsi.ai"},
    {name = "Soham Bhattacharjee", email = "soham.bhattacharjee@lexsi.ai"},
    {name = "Mykola Khandoga", email = "mykola.khandoga@lexsi.ai"},
    {name = "Rui Yuan", email = "rui.yuan@lexsi.ai"},
    {name = "Vinay Kumar Sankarapu", email = "v.k@lexsi.ai"}
]
keywords = [
    "alignment",
    "rlhf",
    "fine-tuning",
    "llm",
    "machine learning", 
    "SFT", 
    "RL", 
    "DPO", 
    "GRPO", 
    "PPO", 
    "GSPO",
    "BOLT",
    "transformers",
    "trl",
    "unsloth",
    "multi-backend",
    "reward-functions",
    "evaluation",
    "lm-eval",
    "wandb",
    "tensorboard",
    "checkpointing",
    "device-management",
    "unified-config",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core ML dependencies
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    
    # Core Python dependencies
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.17.0",
    "tqdm>=4.64.0",
    "psutil>=5.9.0",
    
    # Data processing
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    
    # Utilities
    "click>=8.0.0",
    "rich>=12.0.0",
    "typer>=0.7.0",
    
    # Reinforcement Learning
    "trl==0.23.0",
    
    # Unsloth acceleration
    "unsloth==2025.11.1",
    "unsloth_zoo==2025.11.2",
    
    # Logging and monitoring
    "wandb>=0.15.0",
    "tensorboard>=2.12.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    
    # Evaluation metrics
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.3.0",
    "lm-eval>=0.4.0",
    "nltk>=3.8.0",
    
    # Device management (Linux/Windows only)
    "nvitop>=1.1.0; platform_system!='Darwin'",
    "nvidia-ml-py>=11.495.46; platform_system!='Darwin'",
    "gpustat>=1.1.1",
    
    # Testing dependencies
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "hypothesis>=6.70.0",
    
    # Code quality tools
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    
    # Documentation
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.19.0",
]

# No optional dependencies - everything is included
[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/Lexsi-Labs/aligntune"
Repository = "https://github.com/Lexsi-Labs/aligntune"
Documentation = "https://aligntune.readthedocs.io"
"Bug Tracker" = "https://github.com/Lexsi-Labs/aligntune/issues"
"Changelog" = "https://github.com/Lexsi-Labs/aligntune/blob/main/CHANGELOG.md"
"Discussions" = "https://github.com/Lexsi-Labs/aligntune/discussions"

[project.scripts]
aligntune = "aligntune.cli:main"
at = "aligntune.cli:main"

[project.entry-points."aligntune.trainers"]
# TRL Backend Trainers
trl_sft = "aligntune.backends.trl.sft.sft:TRLSFTTrainer"
trl_dpo = "aligntune.backends.trl.rl.dpo.dpo:TRLDPOTrainer"
trl_ppo = "aligntune.backends.trl.rl.ppo.ppo:TRLPPOTrainer"
# Unsloth Backend Trainers
unsloth_sft = "aligntune.backends.unsloth.sft.sft:UnslothSFTTrainer"
unsloth_dpo = "aligntune.backends.unsloth.rl.dpo.dpo:UnslothDPOTrainer"
unsloth_ppo = "aligntune.backends.unsloth.rl.ppo.ppo:UnslothPPOTrainer"
unsloth_grpo = "aligntune.backends.unsloth.rl.grpo.grpo:EnhancedGRPOTrainer"
unsloth_gspo = "aligntune.backends.unsloth.rl.gspo.gspo:EnhancedGSPOTrainer"

[project.entry-points."aligntune.backends"]
trl = "aligntune.backends.trl:TRLBackend"
unsloth = "aligntune.backends.unsloth:UnslothBackend"

[project.entry-points."aligntune.evaluation"]
lm_eval = "aligntune.eval.lm_eval_runner:LMEvalRunner"
custom = "aligntune.eval.custom_runner:CustomEvalRunner"

[project.entry-points."aligntune.rewards"]
registry = "aligntune.rewards.core:RewardRegistry"
factory = "aligntune.rewards.core:RewardFunctionFactory"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aligntune" = [
    "*.yaml",
    "*.yml",
    "*.json",
    "*.md",
    "*.txt",
    "py.typed",
    # Configuration files
    "configs/*.yaml",
    "configs/*.yml",
    "configs/*.json",
    # SFT configurations
    "sft/*.yaml",
    "sft/*.yml",
    "sft/*.json",
    # RL configurations
    "rl/*.yaml",
    "rl/*.yml",
    "rl/*.json",
    # Backend configurations
    "backends/*/*.yaml",
    "backends/*/*.yml",
    "backends/*/*.json",
    # (Excluded examples/tests/docs from package to keep library lean)
    # CLI configurations
    "cli/*.yaml",
    "cli/*.yml",
    "cli/*.json",
    # Evaluation configurations
    "eval/*.yaml",
    "eval/*.yml",
    "eval/*.json",
    # Reward configurations
    "rewards/*.yaml",
    "rewards/*.yml",
    "rewards/*.json",
]


# Black configuration
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["aligntune"]
known_third_party = [
    "torch", 
    "transformers", 
    "datasets", 
    "accelerate", 
    "peft", 
    "trl", 
    "unsloth",
    "wandb",
    "numpy",
    "pandas"
]

# mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "unsloth.*",
    "trl.*",
    "wandb.*",
    "tensorboard.*",
    "evaluate.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/aligntune",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-v"
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
    "unsloth: marks tests that require Unsloth",
    "wandb: marks tests that require WandB",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/aligntune"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Ruff configuration (modern linter alternative to flake8)
[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

# Bandit security linting
[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601"]